# xresloader

./: .clang-format  .classpath  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  ApachePOI.eml  HISTORY.md  LICENSE  README.md  build.gradle  eclipse-formatter.xml  pom.xml  pracing_dev.ps1  role_cfg.lua  settings.gradle  xresloader.eml  xresloader.properties  xresloader.xml
.github/: FUNDING.yml  release-drafter.yml
.github/workflows/: build.yml  cd.yml  release.yml  sync.yml
doc/: INSTALL.md  TODO.xls
header/: pb_header.pb  pb_header.pb.cc  pb_header.pb.h  pb_header.proto  pb_header_pb2.py  pb_header_v3.pb  pb_header_v3.proto
header/extensions/: xresloader.proto  xresloader_ue.proto
loader-binding/cxx/: README.md  gen_protocol.py  gen_protocol_v2.py  gen_protocol_v3.py  libresloader.h  pb_header.pb.cc  pb_header.pb.h  pb_header_v3.pb.cc  pb_header_v3.pb.h
loader-binding/javascript/: README.md
loader-binding/lua/: README.md
loader-binding/msgpack/: README.md
loader-binding/pbc/: README.md  pbc_config_manager.lua
loader-binding/upb-lua/: README.md
sample/: README.md  TODO.xls  arr_in_arr_cfg.json  benchmark.ps1  cb_script.js  custom_validator.yaml  dep_level2.pb.cc  dep_level2.pb.h  dep_level2.proto  dependency.pb.cc  dependency.pb.h  dependency.proto  gen_protocol.py  gen_protocol_v2.gen.sh  gen_protocol_v2.py  gen_protocol_v3.gen.sh  gen_protocol_v3.py  gen_sample_output.bat  gen_sample_output.ps1  gen_sample_output.sh  gen_sample_with_cb_output.ps1  intext-validator.txt  kind.pb  kind.pb.cc  kind.pb.h  kind.proto  kind_const.lua  none_cb.js  read_kind_sample.cpp  role_cfg.amd.js  role_cfg.js  role_cfg.json  role_cfg.lua  role_cfg.n.js  role_cfg.xml  role_upgrade_cfg.json  upgrade_cb.js  资源转换示例-大文件.xlsx  资源转换示例.scheme.ini  资源转换示例.scheme.json  (+2 more)
sample/cxx/: CMakeLists.txt  dep_level2.pb.cc  dep_level2.pb.h  dependency.pb.cc  dependency.pb.h  kind.pb.cc  kind.pb.h  read_kind_sample.cpp
sample/cxx/v2/: dep_level2.pb.cc  dep_level2.pb.h  dependency.pb.cc  dependency.pb.h  kind.pb.cc  kind.pb.h  xresloader.pb.cc  xresloader.pb.h  xresloader_ue.pb.cc  xresloader_ue.pb.h
sample/cxx/v2/google/protobuf/: descriptor.pb.cc  descriptor.pb.h
sample/cxx/v3/: dep_level2.pb.cc  dep_level2.pb.h  dependency.pb.cc  dependency.pb.h  kind.pb.cc  kind.pb.h  xresloader.pb.cc  xresloader.pb.h  xresloader_ue.pb.cc  xresloader_ue.pb.h
sample/cxx/v3/google/protobuf/: descriptor.pb.cc  descriptor.pb.h
sample/lua/: sample_lua.lua
sample/pbc/: sample_pbc.lua
sample/proto_v2/: ArrInArrCfg.json  KindConst.cpp  KindConst.csv  KindConst.h  RoleUpgradeCfg.cpp  UnreaImportSettings.json  arr_in_arr_cfg.hidden.lua  arr_in_arr_cfg.lua  arr_in_arr_cfg.xml  data_source_mapping.txt  dep_level2.proto  dependency.proto  event_cfg.hidden.lua  event_cfg.lua  field_alias.lua  keep_empty_list_cfg.lua  kind.desc.json  kind.desc.lua  kind.pb  kind.proto  kind_const.lua  kind_const_module.lua  kind_option.js  kind_option.lua  kind_option.mod.lua  next_alias.lua  process_by_script.json  process_by_script.lua  role_cfg.amd.js  role_cfg.js  role_cfg.json  role_cfg.lua  role_cfg.n.js  role_cfg.xml  role_cfg_module.lua  role_upgrade_cfg.json  role_upgrade_cfg.lua  strip_list_tail_cfg.lua
sample/proto_v3/: ArrInArrCfg.csv  ArrInArrCfg.json  EventCfg.json  KindConst.csv  KindConst.h  RoleUpgradeCfg.h  UnreaImportSettings.json  arr_in_arr_cfg.hidden.lua  arr_in_arr_cfg.lua  arr_in_arr_cfg.xml  benchmark.txt  data_source_mapping.txt  dep_level2.proto  dependency.proto  event_cfg.hidden.lua  event_cfg.lua  field_alias.lua  global_settings.lua  kind.pb  (+22 more)
tools/: GenUETableFuncCode.py  extensions.pb  find_protoc.py  gen_header.py  gen_header_v2.py  gen_header_v3.py  print_pb_bin.py  requirements.txt
(+309 files in other folders)
